# llm-agent-tester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_demo.py  multi_agent.py  quick_start.py
src/llm_tester/: __init__.py
src/llm_tester/agents/: __init__.py  base.py  multi_agent.py  react_agent.py
src/llm_tester/benchmarks/: __init__.py  metrics.py  runner.py
src/llm_tester/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py  zhipu_provider.py
src/llm_tester/utils/: __init__.py  config.py  display.py
tests/: test_benchmark.py  test_metrics.py  test_providers.py
