[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-agent-tester"
version = "0.1.0"
description = "A lightweight framework for benchmarking LLM providers and testing multi-agent orchestration patterns."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "asyncio-throttle>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tester"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
